# ray-tracer-one-weekend

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  compile_commands.json
.fleet/: run.json
output/: test.ppm
src/: camera.h  dielectric.h  hitable.h  hitablelist.h  lambertian.h  material.h  metal.h  ray-tracer.cpp  ray.h  sphere.h  textured.h  vec3.h
